--- a/style.css
+++ b/style.css
@@ -2,3 +2,112 @@
     margin: 0;
     padding: 0;
 }
+.w {
+    width: 1200px;
+    margin: auto;
+}
+body {
+    background-color: #f3f5f7;
+}
+
+li {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+}
+
+ /* 前后都堵上，都添加一个盒子 */
+ .clearfix::before,
+ .clearfix:after {
+     content: "";
+     display: table;
+ }
+
+ .clearfix:after {
+     clear: both;
+ }
+
+ .clearfix {
+     /*IE6、7专有*/
+     *zoom: 1
+ }
+
+.header {
+    /* 层叠了w的margin */
+    margin: 30px auto;
+}
+.logo {
+    float: left;
+    width: 198px;
+    height: 42px;
+    background-image: url(images/logo.png);
+}
+.nav {
+    float: left;
+    margin-left: 60px;
+}
+
+.nav ul li{
+    float: left;
+    border: royalblue 2px;
+    margin: 0 15px;
+}
+
+.nav ul li a {
+    display: block;
+    height: 42px; 
+    padding: 0 10px;
+    line-height: 42px;
+    font-size: 18px;
+    color: #050505;
+}
+
+.nav ul li a:hover {
+    border-bottom: 2px solid #00a4ff;
+    color: #00a4ff;
+}
+
+.search {
+    float: left;
+    width: 412px;
+    height: 42px;
+    margin-left: 70px;
+    background-color: skyblue;
+}
+.search input {
+    /* 行内块元素间有缝隙，加浮动 */
+    float: left;
+    /* 有padding 360px-15px=345px */
+    width: 345px;
+    height: 40px;
+    border: 1px solid #00a4ff;
+    border-right: 0;
+    color: #bfbfbf;
+    font-size: 14px;
+    padding-left: 15px;
+}
+.search button {
+    /* 行内块元素间有缝隙，加浮动 */
+    float: left;
+    width: 50px;
+    height: 42px;
+    border: 0;
+    background-image: url(images/btn.png);
+    /* button要去掉默认边框 */
+}
+.user {
+    float: right;
+    line-height: 42px;
+    margin-right: 30px;
+    color: #666;
+    font-size: 14px;
+}
+.banner {
+    height: 421px;
+    background-color: 1c036c;
+}
+.banner .w {
+    height: 421px;
+    background: url(images/banner2_20190819_210028.png) no-repeat top center;
+}
