--- a/style.css
+++ b/style.css
@@ -10,6 +10,21 @@ body {
     background-color: #f3f5f7;
 }
 
+.clearfix::before,
+.clearfix:after {
+    content: "";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    /*IE6、7专有*/
+    *zoom: 1
+}
+
 li {
     list-style: none;
 }
@@ -17,21 +32,7 @@ a {
     text-decoration: none;
 }
 
- /* 前后都堵上，都添加一个盒子 */
- .clearfix::before,
- .clearfix:after {
-     content: "";
-     display: table;
- }
-
- .clearfix:after {
-     clear: both;
- }
-
- .clearfix {
-     /*IE6、7专有*/
-     *zoom: 1
- }
+ 
 
 .header {
     /* 层叠了w的margin */
@@ -105,9 +106,199 @@ a {
 }
 .banner {
     height: 421px;
-    background-color: 1c036c;
+    background-color: #1c036c;
 }
 .banner .w {
+    float: center;
     height: 421px;
     background: url(images/banner2_20190819_210028.png) no-repeat top center;
 }
+.subnav {
+    float: left;
+    width: 190px;
+    height: 421px;
+    
+    background: rgba(0, 0, 0, .3);
+}
+.subnav li {
+    line-height: 46px;
+    height: 46px;
+    padding: 0px 20px;
+}
+/* a是行内元素，没有高度 */
+.subnav li a{
+    font-size: 14px;
+    color: white;
+}
+.subnav li a:hover{
+    color: #00a4ff;
+}
+
+.subnav li a span{
+   float: right;
+}
+.course {
+    float: right;
+    width: 230px;
+    height: 300px;
+    background-color: white;
+    margin-top: 50px;
+}
+.course h2 {
+    height: 48px;
+    background-color: #9bceea;
+    line-height: 48px;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+}
+.bd {
+    padding: 0 20px;
+}
+.bd li{
+    padding:  14px 0;
+    border-bottom: 1px  solid #ccc;
+}
+.bd ul li h4{
+    font-size: 16px;
+    color: #4e4e44;
+}
+.bd ul li p{
+    font-size: 12px;
+    color: #a5a5a5;
+}
+.bd .more {
+    display: block;
+    height: 38px;
+    line-height: 38px;
+    text-align: center;
+    margin: 5px 0;
+    padding: 0px 20px;
+    border: 1px solid #00a4ff;
+    color: #00a4ff;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.goods {
+    height: 60px;
+    /* 行高会继承给孩子 */
+    line-height: 60px;
+    background-color: #fff;
+    margin-top: 10px;
+    box-shadow: 0 2px 3px 3px rgba(0, 0, 0, .1);
+}
+.goods h3{
+    float: left;
+    margin-left: 30px;
+    font-size: 16px;
+    color: #00a4ff;
+}
+.goods .goods-item {
+    float: left;
+    margin-left: 30px;
+}
+.goods .goods-item li{
+    float: left;
+}   
+.goods .goods-item li a{
+    padding: 0 30px;
+    font-size: 16px;
+    color: #050505;
+    border-left: 1px solid #ccc;
+}   
+.goods .mod{
+    float: right;
+    margin-right: 30px;
+    font-size: 14px;
+    color: #00a4ff;
+}
+.box {
+    margin-top: 30px;
+}
+.box-hd {
+    height: 45px;
+}
+.box .box-hd h3{
+    float: left;
+    font-size: 20px;
+    color: #494949;
+}
+.box .box-hd a{
+    float: right;
+    font-size: 12px;
+    color: #252525;
+    margin-top: 10px;
+    margin-right: 30px;
+}
+/* 把li的父级ul改到够宽，一行装下5个有margin-right的li，li就不会换行 */
+.box-bd ul {
+    width: 1225px;
+}
+.box-bd ul li{
+    float: left;
+    width: 228px;
+    height: 270px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    background-color: #fff;
+}
+.box-bd ul li img{
+    width: 100%;
+}
+.box-bd ul li h4{
+    margin: 20px 20px 20px 25px;
+    color: #050505;
+    font-size: 14px;
+    font-weight: 400;
+}
+.box-bd ul li .info{
+    margin: 0 20px 0 25px;
+    color: #999;
+    font-size: 12px;
+}
+.box-bd ul li .info span{
+    color: #ff7c2d;
+    
+}
+.footer {
+    height: 415px;
+    background-color: #fff;
+}
+.footer .w{
+    padding-top: 35px;
+}
+.copyright {
+    float: left;
+}
+.copyright p {
+    color: #666;
+    font-size: 12px;
+    margin: 20px 0 15px 0;
+}
+.copyright .app {
+    display: block;
+    width: 118px;
+    height: 33px;
+    line-height: 33px;
+    text-align: center;
+    border: 1px solid #00a4ff;
+    color: #00a4ff;
+}
+.links{
+    float:right;
+}
+.links dl  {
+    float:right;
+    margin-left: 100px;
+}
+.links dl dt {
+    color: #333;
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+.links dl dd a {
+    color: #333;
+    font-size: 12px;
+}
+
