--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ a {
 .box-bd ul {
     width: 1225px;
 }
-.box-bd ul li{
+.box-bd ul li {
     float: left;
     width: 228px;
     height: 270px;
@@ -243,10 +243,19 @@ a {
     margin-bottom: 15px;
     background-color: #fff;
 }
-.box-bd ul li img{
+.box-bd ul li>img {
     width: 100%;
 }
-.box-bd ul li h4{
+.box-bd ul li
+{
+    position:relative;
+}
+.box-bd ul li em {
+    position:absolute;
+    top: 4px;
+    right: -4px;
+}
+.box-bd ul li h4 {
     margin: 20px 20px 20px 25px;
     color: #050505;
     font-size: 14px;
